Labels and Javascript

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -649,9 +649,11 @@ Export_ExportFormat_BIBTEX = BibTeX
 
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
+Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
+
 Export_ExportFormat_XML = XML
 
-Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
+Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
 
 Export_FileFormat_HTML = HTML
 
@@ -662,8 +664,6 @@ Export_FileFormat_PDF = PDF
 Export_FileFormat_RTF = RTF
 
 Export_FileFormat_SNIPPET = SNIPPET
-
-Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
 
 Feed_OrgUnit_Recent_Releases = Neue PubMan Eintr\u00E4ge f\u00FCr die Organisation
 
@@ -2203,6 +2203,8 @@ submission_lnkImportWorkspace = Import Bereich
 submission_lnkMultipleImport = Massenimport
 
 submission_lnkNewSubmission = Detaillierte Eingabe
+
+test = =
 
 #
 # Title
