--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -21,8 +21,8 @@
 #
 #
 # Copyright 2006-2009 Fachinformationszentrum Karlsruhe Gesellschaft
-# für wissenschaftlich-technische Information mbH and Max-Planck-
-# Gesellschaft zur Förderung der Wissenschaft e.V.
+# f?r wissenschaftlich-technische Information mbH and Max-Planck-
+# Gesellschaft zur F?rderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
 AcceptItemPage = Accept Item
@@ -646,9 +646,11 @@ Export_ExportFormat_BIBTEX = BibTeX
 
 Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
+Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
+
 Export_ExportFormat_XML = XML
 
-Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
+Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
 
 Export_FileFormat_HTML = HTML
 
@@ -659,8 +661,6 @@ Export_FileFormat_PDF = PDF
 Export_FileFormat_RTF = RTF
 
 Export_FileFormat_SNIPPET = SNIPPET
-
-Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
 
 Feed_OrgUnit_Recent_Releases = Recent Releases of Organizational Unit 
 
