--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -682,11 +682,11 @@ Home_Header_Current = Current functionalities
 
 Home_Header_LastItems = Last Released Items
 
-Home_Header_LastItems_Disabled = LastItems feed disabled due non-productive environment
+Home_Header_LastItems_Disabled = Last items feed disabled due to non-productive environment
 
 Home_Header_News = Latest News on PubMan
 
-Home_Header_News_Disabled = News disabled due non-productive environment
+Home_Header_News_Disabled = News disabled due to non-productive environment
 
 #
 # HomePage
