PUBMAN-1242 fixed: Default validation does not check if identifier without a value is populated

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -75,6 +75,8 @@ GenreNotProvided = Bitte geben Sie das Genre an.
 
 GenreNotSuitable = Das ausgew\u00E4hle Genre ist f\u00FCr die gew\u00E4hlte Collection nicht zul\u00E4ssig.
 
+IdTypeNotProvided = Bei einem Identifier fehlt der Typ.
+
 LocatorIsNoUri = Die externe Referenz ist keine g\u00FCltige URL.
 
 #
