--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -78,6 +78,8 @@ GenreNotProvided = Please specify the Genre.
 
 GenreNotSuitable = The selected genre is not allowed in the actual collection.
 
+IdTypeNotProvided = An identifier is missing the type.
+
 LocatorIsNoUri = The external reference is no valid URL.
 
 #
