--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -78,6 +78,8 @@ GenreNotProvided = \u7A2E\u5225\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\
 
 GenreNotSuitable = \u9078\u629E\u4E2D\u306E\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u3067\u306F\u6307\u5B9A\u3057\u305F\u8CC7\u6599\u7A2E\u5225\u306E\u767B\u9332\u306F\u8A31\u53EF\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
+IdTypeNotProvided = An identifier is missing the type.
+
 LocatorIsNoUri = \u6307\u5B9A\u3057\u305F\u5916\u90E8URL\u306E\u6B63\u3057\u3044\u5F62\u5F0F\u3068\u306A\u3063\u3066\u3044\u307E\u305B\u3093\u3002
 
 #
