--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1943,7 +1943,7 @@ import_workspace_status = Status
 
 import_workspace_submit_items = Einstellen
 
-import_workspace_submit_release_items = Einstellen&freigeben
+import_workspace_submit_release_items = Freigeben
 
 import_workspace_title = Import Bereich
 
