--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1943,7 +1943,7 @@ import_workspace_status = Status
 
 import_workspace_submit_items = Submit
 
-import_workspace_submit_release_items = Submit&Release
+import_workspace_submit_release_items = Release
 
 import_workspace_title = Import workspace
 
