Bugfix: Added label for bachelor

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -247,6 +247,8 @@ ENUM_CRITERIA_STATE = State
 
 ENUM_CRITERIA_TITLE = Title
 
+ENUM_DEGREETYPE_BACHELOR = Bachelor
+
 ENUM_DEGREETYPE_DIPLOMA = Diploma
 
 ENUM_DEGREETYPE_HABILITATION = Habilitation
