--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -243,6 +243,8 @@ ENUM_CRITERIA_STATE = \u767B\u9332\u72B6\u6CC1
 
 ENUM_CRITERIA_TITLE = \u30BF\u30A4\u30C8\u30EB
 
+ENUM_DEGREETYPE_BACHELOR = Bachelor
+
 ENUM_DEGREETYPE_DIPLOMA = \u5B66\u58EB\u53F7 (Diploma)
 
 ENUM_DEGREETYPE_HABILITATION = \u6559\u6388\u8CC7\u683C\u8A8D\u8A3C\u8AD6\u6587 (Habilitation)
