--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -248,6 +248,8 @@ ENUM_CRITERIA_STATE = Status
 
 ENUM_CRITERIA_TITLE = Titel
 
+ENUM_DEGREETYPE_BACHELOR = Bachelor
+
 ENUM_DEGREETYPE_DIPLOMA = Diplom
 
 ENUM_DEGREETYPE_HABILITATION = Habilitation
