correct snippet labeling

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -655,7 +655,7 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 Export_ExportFormat_XML = XML
 
-Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
+Export_FileFormat_ESCIDOC_SNIPPET = SNIPPET v6.x
 
 Export_FileFormat_HTML = HTML
 
@@ -665,7 +665,7 @@ Export_FileFormat_PDF = PDF
 
 Export_FileFormat_RTF = RTF
 
-Export_FileFormat_SNIPPET = SNIPPET
+Export_FileFormat_SNIPPET = SNIPPET v5.x
 
 Feed_OrgUnit_Recent_Releases = Neue PubMan Eintr\u00E4ge f\u00FCr die Organisation
 
