--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -652,7 +652,7 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 Export_ExportFormat_XML = XML
 
-Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
+Export_FileFormat_ESCIDOC_SNIPPET = SNIPPET v6.x
 
 Export_FileFormat_HTML = HTML
 
@@ -662,7 +662,7 @@ Export_FileFormat_PDF = PDF
 
 Export_FileFormat_RTF = RTF
 
-Export_FileFormat_SNIPPET = SNIPPET
+Export_FileFormat_SNIPPET = SNIPPET v5.x
 
 Feed_OrgUnit_Recent_Releases = Recent Releases of Organizational Unit 
 
