--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -648,7 +648,7 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
 Export_ExportFormat_XML = XML
 
-Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc SNIPPET
+Export_FileFormat_ESCIDOC_SNIPPET = \u53C2\u7167\u5F62\u5F0F\u4ED8\u304DXML v6.x
 
 Export_FileFormat_HTML = HTML
 
@@ -658,7 +658,7 @@ Export_FileFormat_PDF = PDF
 
 Export_FileFormat_RTF = RTF
 
-Export_FileFormat_SNIPPET = \u53C2\u7167\u5F62\u5F0F\u4ED8\u304DXML
+Export_FileFormat_SNIPPET = \u53C2\u7167\u5F62\u5F0F\u4ED8\u304DXML v5.x
 
 Feed_OrgUnit_Recent_Releases = \u7D44\u7E54\u306E\u6700\u65B0\u516C\u958B\u30A2\u30A4\u30C6\u30E0
 
