PUBMAN-1287 fixed: IE7, view type broken in item list

--- a/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_de.properties
@@ -692,12 +692,16 @@ List_btGo = Gehe zur ausgew\u00E4hlten Seite
 
 List_lblAddToBasket = Zum Basket hinzuf\uFFFDgen
 
+List_lblBibList = Bibliographische Liste
+
 List_lblExportOptions = Exportieren
 
 # Menu
 List_lblFilterOptions = Filtern
 
 List_lblGoToPage = Gehe zur Seite
+
+List_lblGridList = Tabellarische Ansicht
 
 List_lblPage = Seite
 
@@ -1819,8 +1823,6 @@ login_btLogout = Ausloggen
 mainMenu_lblBrowse = Navigieren
 
 mainMenu_lblMy = Dateneingabe
-
-mainMenu_lblMyWorkspace = 
 
 mainMenu_lblQA = Qualit\u00E4ts- sicherung
 
