--- a/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_en.properties
@@ -693,12 +693,16 @@ List_btGo = Go to selected page
 
 List_lblAddToBasket = Add To Basket
 
+List_lblBibList = Bibliographic List
+
 List_lblExportOptions = Export
 
 # Menu
 List_lblFilterOptions = Filter
 
 List_lblGoToPage = Go to page
+
+List_lblGridList = Table View
 
 #
 # List 
