--- a/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Tooltip_ja.properties
@@ -693,11 +693,15 @@ List_btGo = \u6307\u5B9A\u30DA\u30FC\u30B8\u306B\u79FB\u52D5\u3059\u308B
 
 List_lblAddToBasket = \u4E00\u6642\u4FDD\u5B58\u306B\u8FFD\u52A0\u3059\u308B
 
+List_lblBibList = \u30EA\u30B9\u30C8\u5F62\u5F0F\u3067\u8868\u793A
+
 List_lblExportOptions = \u30D5\u30A1\u30A4\u30EB\u306B\u4FDD\u5B58\u3059\u308B
 
 List_lblFilterOptions = \u7D5E\u308A\u8FBC\u307F
 
 List_lblGoToPage = Go to page
+
+List_lblGridList = \u8868\u5F62\u5F0F\u3067\u8868\u793A
 
 #
 # List 
@@ -1912,7 +1916,7 @@ search_lblAdvancedSearch_noresults = Advanced Search
 #
 search_lblIncludeFiles = Include files
 
-search_lblSearch = Search released items	
+search_lblSearch = Search released items\u0009
 
 search_start = \u691C\u7D22\u3092\u958B\u59CB\u3059\u308B
 
