--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -388,7 +388,7 @@ ENUM_MIMETYPE_VIDEO_MPG = video/mpeg
 
 ENUM_REVIEWMETHOD_INTERNAL = Interne Begutachtung
 
-ENUM_REVIEWMETHOD_NO_REVIEW = keine Begutachtung
+ENUM_REVIEWMETHOD_NO_REVIEW = Keine Begutachtung
 
 ENUM_REVIEWMETHOD_PEER = Expertenbegutachtung
 
