Revised wording of link 'ADD ITEM TO BASKET' to 'Add item to basket' (like other action links)

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -886,6 +886,8 @@ ViewItemFull_lblAbstract = Zusammenfassung
 
 ViewItemFull_lblAddToBasket = Zum Basket hinzuf\u00FCgen
 
+ViewItemFull_lblRemoveFromBasket = Aus dem Basket entfernen
+
 ViewItemFull_lblAffiliations = Affiliations
 
 ViewItemFull_lblAll = alle
