--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -883,6 +883,8 @@ ViewItemFull_lblAbstract = Abstract
 
 ViewItemFull_lblAddToBasket = Add to Basket
 
+ViewItemFull_lblRemoveFromBasket = Remove from Basket
+
 ViewItemFull_lblAffiliations = Affiliations
 
 ViewItemFull_lblAll = all
