Improvement: PUBMAN-1111 - Asterix for mandatory fields and validation rules

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -462,6 +462,10 @@ localeEN = Englisch
 
 mandatoryField = Pflichtfeld
 
+mandatoryFieldFS1 = Pr\u00FCfe hier 
+
+mandatoryFieldFS2 = auf weitere Pflichtfelder
+
 multipleImport_description = multipleImport_description
 
 multiple_import_no_details = Keine Details verf\u00FCgbar
