--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -187,7 +187,7 @@ depositorWS_SuccessfullyDeleted = The item has been deleted.
 
 depositorWS_SuccessfullyReleased = The item has been released
 
-depositorWS_SuccessfullyRevised = The item has been revised.
+depositorWS_SuccessfullyRevised = The item has been sent back for rework.
 
 depositorWS_SuccessfullySaved = The item has been saved.
 
@@ -466,7 +466,11 @@ localeDE = german
 
 localeEN = english
 
-mandatoryField = mandatory field
+mandatoryField = Mandatory field
+
+mandatoryFieldFS1 = Check 
+
+mandatoryFieldFS2 = for additional mandatory fields
 
 multipleImport_description = multipleImport_description
 
