--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -470,6 +470,10 @@ localeJA = \u65E5\u672C\u8A9E
 
 mandatoryField = \u5FC5\u9808\u9805\u76EE
 
+mandatoryFieldFS1 = Check 
+
+mandatoryFieldFS2 = for additional mandatory fields
+
 multipleImport_description = multipleImport_description
 
 multiple_import_no_details = No details available
