Bugfix: PUBMAN-1287 - IE7, view type broken in item list

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -735,7 +735,7 @@ List_ShortView = Kurzansicht (alle Datens\u00E4tze)
 
 List_lblAddToBasket = ZUM BASKET HINZUF\u00DCGEN
 
-List_lblBibList = Bibliographische Liste
+List_lblBibList = Bibliographisch
 
 List_lblExportOptions = EXPORT
 
@@ -745,7 +745,7 @@ List_lblGo = Los
 
 List_lblGoToPage = Gehe zu Seite
 
-List_lblGridList = Tabellarische Ansicht
+List_lblGridList = Tabellarisch
 
 List_lblPage = Seite
 
