changed upload to Upload due to consistency issues with other command links

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -471,7 +471,7 @@ EditItem_btRemoveSource = Remove Source
 
 EditItem_btSelect = select
 
-EditItem_btUpload = upload
+EditItem_btUpload = Upload
 
 EditItem_btUploadLocator = Upload linked file
 
