Jus-specific Labels and Messages added.

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -20,9 +20,9 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006-2009 Fachinformationszentrum Karlsruhe Gesellschaft
-# f?r wissenschaftlich-technische Information mbH and Max-Planck-
-# Gesellschaft zur F?rderung der Wissenschaft e.V.
+# Copyright 2006-2007 Fachinformationszentrum Karlsruhe Gesellschaft
+# für wissenschaftlich-technische Information mbH and Max-Planck-
+# Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
 AcceptItemPage = Accept Item
@@ -196,8 +196,6 @@ ENUM_CREATORROLE_CONTRIBUTOR = Contributor
 
 ENUM_CREATORROLE_EDITOR = Editor
 
-ENUM_CREATORROLE_HONOREE = Honoree
-
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
 
 ENUM_CREATORROLE_PAINTER = Painter
@@ -207,6 +205,8 @@ ENUM_CREATORROLE_PHOTOGRAPHER = Photographer
 ENUM_CREATORROLE_REFEREE = Referee
 
 ENUM_CREATORROLE_TRANSCRIBER = Transcriber
+
+ENUM_CREATORROLE_HONOREE = Honoree
 
 ENUM_CREATORROLE_TRANSLATOR = Translator
 
@@ -247,8 +247,6 @@ ENUM_CRITERIA_STATE = State
 
 ENUM_CRITERIA_TITLE = Title
 
-ENUM_DEGREETYPE_BACHELOR = Bachelor
-
 ENUM_DEGREETYPE_DIPLOMA = Diploma
 
 ENUM_DEGREETYPE_HABILITATION = Habilitation
@@ -261,7 +259,10 @@ ENUM_DEGREETYPE_PHD = PHD
 
 ENUM_DEGREETYPE_STAATSEXAMEN = Staatsexamen
 
-ENUM_EMPTY = -
+ENUM_EMPTY = no entry
+#
+# Genre Types
+#
 
 ENUM_GENRE_ARTICLE = Journal Article
 
@@ -269,13 +270,13 @@ ENUM_GENRE_BOOK = Book
 
 ENUM_GENRE_BOOK_ITEM = Book Chapter
 
-ENUM_GENRE_CONFERENCE_PAPER = Proceedings Paper
+ENUM_GENRE_CONFERENCE_PAPER = Conference Paper 
 
 ENUM_GENRE_CONFERENCE_REPORT = Conference report
 
 ENUM_GENRE_COURSEWARE_LECTURE = Teaching
 
-ENUM_GENRE_ISSUE = Special Issue
+ENUM_GENRE_ISSUE = Special Journal Issue
 
 ENUM_GENRE_JOURNAL = Journal
 
@@ -296,6 +297,67 @@ ENUM_GENRE_SERIES = Series
 ENUM_GENRE_TALK_AT_EVENT = Talk
 
 ENUM_GENRE_THESIS = Thesis
+
+#Jus-specific Publication types BEGIN
+
+# source Newspaper
+ENUM_GENRE_NEWSPAPER_ARTICLE = Newspaper Article 
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_NOTE = Case Note
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_STUDY = Case Study
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_BOOK_REVIEW = Book Review
+
+# kind of Journal Article, source Journal or without source, can be published on a webpage
+ENUM_GENRE_OPINION = Opinion
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary 	
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift 
+
+# kind of Book, source Encyclopedia
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook 
+
+# kind of Journal Article, source Journal, Book
+ENUM_GENRE_EDITORIAL = Editorial
+
+#
+# Jus-specific Source genres
+#
+
+ENUM_GENRE_MONOGRAPH = Monograph
+
+ENUM_GENRE_NEWSPAPER = Newspaper
+
+ENUM_GENRE_ENCYCLOPEDIA = Encyclopedia 
+
+ENUM_GENRE_MULTI_VOLUME = Multi-Volume 
+
+ENUM_GENRE_COMMENTARY = Commentary 
+
+ENUM_GENRE_HANDBOOK = Handbook 
+
+ENUM_GENRE_COLLECTED_EDITION = Collected Edition
+
+ENUM_GENRE_FESTSCHRIFT = Festschrift
+
+source_identifier_type = Type of identifier
+
+source_identifier_value = Identifier value
+
+#Jus-specific Publication types END
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
@@ -471,7 +533,7 @@ EditItem_btRemoveSource = Remove Source
 
 EditItem_btSelect = select
 
-EditItem_btUpload = Upload
+EditItem_btUpload = upload
 
 EditItem_btUploadLocator = Upload linked file
 
@@ -577,7 +639,7 @@ EditItem_lblPubLanguage = Language of Publication
 
 EditItem_lblPublishing = Publishing
 
-EditItem_lblPublishingInfo = Publishing Info
+EditItem_lblPublishingInfo = Publishing info
 
 EditItem_lblRelation = Relation
 
@@ -591,7 +653,7 @@ EditItem_lblSource = Source
 
 EditItem_lblStartpage = Startpage
 
-EditItem_lblSubject = Free keywords
+EditItem_lblSubject = free keywords
 
 EditItem_lblTitleAndLanguage = Title and Language
 
@@ -650,10 +712,6 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
-Export_ExportFormat_XML = XML
-
-Export_FileFormat_ESCIDOC_SNIPPET = SNIPPET v6.x
-
 Export_FileFormat_HTML = HTML
 
 Export_FileFormat_ODT = ODT
@@ -662,7 +720,12 @@ Export_FileFormat_PDF = PDF
 
 Export_FileFormat_RTF = RTF
 
-Export_FileFormat_SNIPPET = SNIPPET v5.x
+Export_FileFormat_SNIPPET = SNIPPET
+
+Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
+
+# JUS - Export-Format
+Export_ExportFormat_JUS = JUS
 
 Feed_OrgUnit_Recent_Releases = Recent Releases of Organizational Unit 
 
@@ -684,11 +747,11 @@ Home_Header_Current = Current functionalities
 
 Home_Header_LastItems = Last Released Items
 
-Home_Header_LastItems_Disabled = Last items feed disabled due to non-productive environment
+Home_Header_LastItems_Disabled = LastItems feed disabled due non-productive environment
 
 Home_Header_News = Latest News on PubMan
 
-Home_Header_News_Disabled = News disabled due to non-productive environment
+Home_Header_News_Disabled = News disabled due non-productive environment
 
 #
 # HomePage
@@ -710,7 +773,7 @@ ItemList_Show = Showing
 #
 # ItemList
 #
-ItemList_SortBy = Sort by
+ItemList_SortBy = Sorting
 
 ItemList_SortOrderAscending = ascending
 
@@ -734,6 +797,8 @@ List_lblAddToBasket = ADD SELECTED TO BASKET
 
 List_lblBibList = Bibliographic List
 
+List_lblExportAllOptions = BASKET EXPORT
+
 List_lblExportOptions = EXPORT
 
 List_lblFilterOptions = FILTER
@@ -750,7 +815,7 @@ List_lblRevision = Revisions:
 
 List_lblSelectItem = Select Item
 
-List_lblSortOptions = SORT
+List_lblSortOptions = SORTING
 
 List_lblViewOptions = VIEW
 
@@ -883,8 +948,6 @@ ViewItemFull_lblAbstract = Abstract
 
 ViewItemFull_lblAddToBasket = Add to Basket
 
-ViewItemFull_lblRemoveFromBasket = Remove from Basket
-
 ViewItemFull_lblAffiliations = Affiliations
 
 ViewItemFull_lblAll = all
@@ -961,7 +1024,7 @@ ViewItemFull_lblHasRevision = Revision
 
 ViewItemFull_lblHideGroup = hide
 
-ViewItemFull_lblIdentifiers = Identifiers
+ViewItemFull_lblIdentifiers = Standard Identifiers
 
 ViewItemFull_lblIsAffiliatedTo = Affiliated to
 
@@ -997,11 +1060,15 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = Pages
 
+ViewItemFull_lblPublicationLocation = Publication Location
+
 ViewItemFull_lblPublishingInfo = Publishing info
 
 ViewItemFull_lblRelation = Relation
 
 ViewItemFull_lblReleased = , released
+
+ViewItemFull_lblRemoveFromBasket = Remove From Basket
 
 ViewItemFull_lblRevisionMethod = Rev. Method
 
@@ -1046,6 +1113,15 @@ ViewItemFull_lblSubHeaderEvent = Event
 ViewItemFull_lblSubHeaderFile = Files
 
 #
+# JUS
+#
+ViewItemFull_lblSubHeaderLegalCase = Legal Case
+
+ViewItemFull_lblLegalCaseCourtNameIdDate = Court, Date, Case Reference Nr
+
+ViewItemFull_lblAbstractLanguage = Language of Abstract
+
+#
 # ViewItem Full
 #
 ViewItemFull_lblSubHeaderItem = Genre: 
@@ -1058,7 +1134,7 @@ ViewItemFull_lblSubHeaderSource = Source
 
 ViewItemFull_lblSubHeaderSystemDetails = System Details
 
-ViewItemFull_lblSubject = Free keywords
+ViewItemFull_lblSubject = free keywords
 
 ViewItemFull_lblSystemIdentifiers = version ID
 
@@ -1213,7 +1289,7 @@ ViewItemRevisions_lblReleaseDate = Released:
 #
 # ViewItem Short
 #
-ViewItemShort_lblCreators = Creators
+ViewItemShort_lblCreators = Creator(s)
 
 ViewItemShort_lblDateAccepted = Accepted
 
@@ -1227,15 +1303,15 @@ ViewItemShort_lblDatePublishedOnline = Published online
 
 ViewItemShort_lblDateSubmitted = Submitted
 
-ViewItemShort_lblDates = Dates
+ViewItemShort_lblDates = Date(s)
 
 ViewItemShort_lblDetails = Details
 
-ViewItemShort_lblFile = Files
+ViewItemShort_lblFile = File(s)
 
 ViewItemShort_lblFileAttached = File
 
-ViewItemShort_lblFiles = Files
+ViewItemShort_lblFiles = File(s)
 
 ViewItemShort_lblFilesAttached = Files
 
@@ -1243,7 +1319,7 @@ ViewItemShort_lblGenre = Genre
 
 ViewItemShort_lblLess = Less
 
-ViewItemShort_lblLocator = Locators
+ViewItemShort_lblLocator = Locator(s)
 
 ViewItemShort_lblLocatorAttached = Locator
 
@@ -1373,7 +1449,7 @@ ViewItem_lblSourceVolume = Volume:
 
 ViewItem_lblSourceofSource = Source of source
 
-ViewItem_lblSubject1 = Free keywords:
+ViewItem_lblSubject1 = free keywords:
 
 ViewItem_lblTitle1 = Title:
 
@@ -1453,7 +1529,7 @@ actionMenu_lnkDelete = Delete
 
 actionMenu_lnkEdit = Edit
 
-actionMenu_lnkEditLocalTags = Edit Local Tags
+actionMenu_lnkEditLocalTags = Edit local tags
 
 actionMenu_lnkModify = Modify
 
@@ -1493,11 +1569,11 @@ adv_search_btStart = Start Search
 
 adv_search_fileComponentAvailability = Files & Locators
 
-adv_search_fileComponentEmbargoDate = has embargo date
+adv_search_fileComponentEmbargoDate = has Embargo Date
 
 adv_search_fileComponentVisibility = Visibility
 
-adv_search_fileContentCategory = Content category
+adv_search_fileContentCategory = content category
 
 adv_search_fileExcludeCategory = exclude category
 
@@ -1539,13 +1615,13 @@ adv_search_lblChkGenre_book = Book
 
 adv_search_lblChkGenre_bookitem = Book Chapter
 
-adv_search_lblChkGenre_conferencepap = Proceedings Paper
+adv_search_lblChkGenre_conferencepap = Conference Paper 
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
 adv_search_lblChkGenre_courseware = Teaching
 
-adv_search_lblChkGenre_issue = Special Issue
+adv_search_lblChkGenre_issue = Special Journal Issue
 
 adv_search_lblChkGenre_journal = Journal
 
@@ -1732,7 +1808,11 @@ easy_submission_lblBibtexPath = Path
 
 easy_submission_lblBibtexUpload = Upload
 
-easy_submission_lblCollectionOfItem = This item will be part of 
+easy_submission_lblCollectionOfImportedItem1 = This item will be imported to the
+
+easy_submission_lblCollectionOfImportedItem2 = \ imported
+
+easy_submission_lblCollectionOfItem = This item will be part of the
 
 easy_submission_lblCopyrightDate = Copyright Date
 
@@ -1792,7 +1872,7 @@ easy_submission_lblIDValue = Identifier
 
 easy_submission_lblImportReferences = Import references in a structured format from a local folder here.
 
-easy_submission_lblKeywords = Free Keywords
+easy_submission_lblKeywords = free Keywords
 
 easy_submission_lblLicencingInfo = Licence
 
@@ -1877,7 +1957,19 @@ event_start-date = Start date
 event_title = Title
 
 event_title_alternative = Alternative Title
+#
+# JUS-specific labels BEGIN
+#
+legal_case_title = Title
 
+legal_case_identifier = Case Reference Number 
+
+legal_case_date_published = Date
+
+legal_case_court_name = Court
+#
+# JUS-specific labels END
+#
 export_btDisplay = Display
 
 export_btDownload = Download
@@ -1904,7 +1996,13 @@ g_creator_person_organization = Persons & Organizations
 g_details = Details
 
 g_events = Event
-
+#
+# JUS-specific labels BEGIN
+#
+g_legal_case = Legal Case
+#
+# JUS-specific labels END
+#
 g_files = File
 
 g_identifiers = Identifier
@@ -1945,7 +2043,7 @@ import_workspace_status = Status
 
 import_workspace_submit_items = Submit
 
-import_workspace_submit_release_items = Release
+import_workspace_submit_release_items = Submit&Release
 
 import_workspace_title = Import workspace
 
@@ -1986,7 +2084,7 @@ item_published-online = Date published online
 
 item_review-method = Review type
 
-item_subject = Free keywords
+item_subject = free keywords
 
 item_table-of-contents = Table of content
 
@@ -2056,7 +2154,7 @@ multipleImport_dont_import_anything = If duplicates are detected, don't import a
 
 multipleImport_dont_import_duplicates = Don't import duplicate publications
 
-multipleImport_getMultipleRecords = Import Multiple Items
+multipleImport_getMultipleRecords = Import multiple records
 
 multipleImport_importFormat = Import format
 
@@ -2096,7 +2194,7 @@ qaws_lblCollectionSelection = Collection
 
 qaws_lblItemStateSelection = Item State
 
-qaws_lblMultipleImportTags = Import Multiple Items
+qaws_lblMultipleImportTags = Import
 
 qaws_lblOrgUnitSelection = Organizational Unit
 
@@ -2153,8 +2251,6 @@ source_volume = Volume
 #
 ss = \u00DF
 
-statistics_NIMSLink = Detailed statistics for NIMS items
-
 statistics_btnBack = Back
 
 statistics_lblAllFiles = Total
@@ -2182,11 +2278,11 @@ styleTheme_lblPubMan = PubMan
 
 submission_descEasySubmission = Using the easy submission one can enter stepwise information on a publication. At the end of the wizard one can save the item or switch to the full submission mask to add more details.
 
-submission_descImport = This method allows you to import a single BibTeX reference or it allows you to fetch metadata and full text(s) from other systems like arXiv or PubMed Central.
+submission_descImport = This functionality allows you to import a BibTeX file with one BibTeX reference or it allows you to fetch metadata and fulltext(s) from other systems like arXiv or PubMed Central.
 
-submission_descMultipleImport = This method allows you to import multiple items in a structured format (e.g. EndNote, BibTex).
+submission_descMultipleImport = This functionality allows you to import a BibTeX file with multiple BibTeX references or it allows you to fetch metadata (and fulltexts) from other systems like SPIRES or BioMed Central.
 
-submission_descNewSubmission = The full submission offers a genre specific entry mask for entering reference data. Additionally one or more full texts can be uploaded and information on externally stored data (e.g. Supplementary Material) can be specified.
+submission_descNewSubmission = The full submission offers a genre specific entry mask for entering reference data. Besides that one or more full texts can be uploaded and a locator to externally stored data (e.g. Supplementary Material) can be specified.
 
 submission_lblAuthorCopyPaste = You can copy or write authors to this field which are then parsed and added automatically below after clicking the "Add" button.
 
@@ -2204,7 +2300,7 @@ submission_lnkImport = Import
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = Import Multiple Items
+submission_lnkMultipleImport = Import multiple items
 
 submission_lnkNewSubmission = Full Submission
 
@@ -2224,3 +2320,6 @@ viewItemFullPage = View Item
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
+
+ENUM_IDENTIFIERTYPE_ = n.a.
+
