Jus-specific Labels and Messages added.

--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -83,6 +83,27 @@ IdTypeNotProvided = An identifier is missing the type.
 LocatorIsNoUri = The external reference is no valid URL.
 
 #
+# JUS BEGIN
+#
+StartPageArticleRequiered  = Start Page and End Page has to be provided for Journal Article. 
+
+StartPageNotProvided = Start Page required.  
+
+EndPageNotProvided = End Page requiered.
+
+StartPageLowerEqualEndPage = End Page has to greater or equal to Start Page.
+
+PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
+
+DegreeThesisRequiered = Degree Type required. 
+
+NoConeJournal = No CONE Journal. 
+
+#
+# JUS END
+#
+
+#
 # LoginErrorPage
 #
 LoginErrorPage_loggedOffFromSystem = You have been automatically logged off by the System. Please log in again.
