Improvement: PUBMAN-1279 - Revision of label for message: Please note that this is not the latest version of this item.

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -963,7 +963,7 @@ itemHasBeenChangedInTheMeantime = Der Datensatz, den Sie speichern, einstellen o
 # EditItem
 itemHasNotBeenChanged = Der Datensatz wurde nicht ge\u00E4ndert und somit auch nicht erneut abgespeichert.
 
-itemIsNotLatestVersion = Bitte  beachten Sie, dass das die angezeigte Version des Items nicht die letzte Version ist.
+itemIsNotLatestVersion = Bitte  beachten Sie, dass eine neuere Version dieses Items gerade in Bearbeitung ist.
 
 #
 # Validation rule responses
