--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -441,7 +441,7 @@ itemHasBeenChangedInTheMeantime = The item you want to save, submit or release, 
 # EditItem
 itemHasNotBeenChanged = The Item was not changed and therefore not saved once again.
 
-itemIsNotLatestVersion = Please note that this is not the latest version of this item.
+itemIsNotLatestVersion = Please note that a newer version of this item is in progress.
 
 #
 # Validation rule responses
